--- a/package.json
+++ b/package.json
@@ -9,24 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.18",
     "@clerk/backend": "^1.2.1",
     "@clerk/clerk-react": "^5.2.2",
     "@clerk/nextjs": "^5.1.3",
+    "@clerk/themes": "^2.1.8",
+    "@deepgram/sdk": "^3.3.3",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "ai": "^3.1.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.12.1",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
